# herd

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  SECURITY-REVIEW.md  dashboard.html  herd.yaml.example  skills.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
docs/: LOCAL_TESTING_GUIDE.md
docs/specs/: herd-tune-spec.md
docs/superpowers/plans/: 2026-03-13-keep-alive-hot-models.md
docs/superpowers/specs/: 2026-03-13-keep-alive-hot-models-design.md  2026-04-14-herd-v2-node-mode-design.md
scripts/: herd-tune.ps1  herd-tune.sh
src/: analytics.rs  blob.rs  budget.rs  classifier.rs  classifier_auto.rs  cli.rs  config.rs  discovery.rs  lib.rs  main.rs  metrics.rs  model_homing.rs  profiles.rs  rate_limit.rs  server.rs  updater.rs
src/agent/: audit.rs  executor.rs  mod.rs  permissions.rs  session.rs  store.rs  tools.rs  types.rs  ws.rs
src/api/: admin.rs  agent.rs  metrics.rs  mod.rs  models.rs  nodes.rs  openai.rs  profiles.rs  status.rs
src/backend/: discovery.rs  health.rs  mod.rs  pool.rs  warmer.rs
src/middleware/: circuit_breaker.rs  mod.rs  retry.rs
src/nodes/: db.rs  health.rs  mod.rs  types.rs
src/providers/: billing.rs  cost_db.rs  mod.rs  pricing.rs  rate_limit.rs
src/router/: least_busy.rs  mod.rs  model_aware.rs  priority.rs  weighted_round_robin.rs
tasks/: todo.md
tests/: frontier_escalation.rs
